fix second partial not showing issue

--- a/assets/css/_global.pcss
+++ b/assets/css/_global.pcss
@@ -15,8 +15,3 @@ p {
 
   @media (--tablet) { font-size: 26px; }
 }
-
-a {
-
-}
-
