--- a/assets/css/index.pcss
+++ b/assets/css/index.pcss
@@ -16,6 +16,7 @@
     font-size: 72px;
     font-weight: bold;
     margin-bottom: 40px;
+    margin-top: 0;
 }
 
 .const-article__original-text {
